--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,2 @@
 MONGO_URI = mongodb+srv://charithranguri:adminadmin@cluster0.jzhixxk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT = 3000
