--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-spring/parallax": "^9.7.3",
+    "axios": "^1.7.7",
     "framer-motion": "^11.5.5",
     "lucide-react": "^0.445.0",
     "react": "^18.2.0",
