--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,2 @@
-MONGO_URI = mongodb+srv://vivek:ZAz9Apwha8IrenV6@cluster0.rxsdo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI = mongodb+srv://charithranguri:adminadmin@cluster0.jzhixxk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
